# parse_rust

./: Cargo.toml  LICENCE  LICENSE  README.md
.github/workflows/: rust.yml
examples/: basic_parsing.rs  datetime_parsing.rs  named_fields.rs  search_and_findall.rs
src/: lib.rs
tests/: lib_test.rs
